--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ body {
     color: black;
   }
 
-  .panel:hover {
+  .tile:hover {
     border-color: white;
     box-shadow: 0 0 50px white;
   }
