--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body {
     margin: -250px 0px 0px -250px;
     border-style: solid;
     border-width: 5px;
+    transition-delay: 1s;
   }
   
   .red {
@@ -59,6 +60,7 @@ body {
     margin: -250px 0px 0px 0px;
     border-style: solid;
     border-width: 5px;
+    transition-delay: 1s;
   }
   
   .yellow {
@@ -72,6 +74,7 @@ body {
     margin: 0px -250px 0px -250px;
     border-style: solid;
     border-width: 5px;
+    transition-delay: 1s;
   }
   
   .blue {
@@ -85,6 +88,7 @@ body {
     margin: 0px 0px -250px 0px;
     border-style: solid;
     border-width: 5px;
+    transition-delay: 1s;
   }
   
   #second-circle {
@@ -106,8 +110,9 @@ body {
   }
 
   .tile:hover {
-    border-color: white;
-    box-shadow: 0 0 50px white;
+    /* border-color: white; */
+    /* border: 1px white solid; */
+    /* box-shadow: 0 0 50px white; */
   }
 
   .pressed {
